LogOutput/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dwk-logoutput-svc
spec:
  type: ClusterIP
  selector:
    app: dwk-logoutput
  ports:
    - port: 10000
      protocol: TCP
      targetPort: 9001
