LogOutput/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/status
        pathType: Prefix
        backend:
          service:
            name: dwk-logoutput-svc
            port:
              number: 10001
